src-tauri/src/pagination/snapshots/agaric_lib__pagination__tests__snapshot_history_entry_response.snap
---
source: src/pagination/tests.rs
expression: resp
---
items:
  - device_id: snap-device
    seq: 1
    op_type: create_block
    payload: "{\"block_id\":\"SNAP_HIS\",\"block_type\":\"content\",\"content\":\"snap\"}"
    created_at: "[TIMESTAMP]"
next_cursor: "[CURSOR]"
has_more: false
