src-tauri/src/pagination/snapshots/agaric_lib__pagination__tests__snapshot_page_response_list_children.snap
---
source: src/pagination/tests.rs
expression: resp
---
items:
  - id: SNAP_CH1
    block_type: content
    content: first child
    parent_id: SNAP_PAR
    position: 1
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: ~
  - id: SNAP_CH2
    block_type: content
    content: second child
    parent_id: SNAP_PAR
    position: 2
    deleted_at: ~
    todo_state: ~
    priority: ~
    due_date: ~
    scheduled_date: ~
    page_id: ~
next_cursor: ~
has_more: false
